--- a/Exam.html
+++ b/Exam.html
@@ -408,7 +408,7 @@
           </div>
           <div class="meta-item">
             <i class="far fa-question-circle"></i>
-            <span>80 Questions</span>
+            <span>144 Questions</span>
           </div>
           <div class="meta-item">
             <i class="fas fa-trophy"></i>
@@ -427,7 +427,7 @@
       </div>
       <div class="exam-stats">
         <div class="stat">
-          <div class="stat-value">80</div>
+          <div class="stat-value">144</div>
           <div class="stat-label">Questions</div>
         </div>
         <div class="stat">
@@ -484,17 +484,166 @@ document.getElementById('filePathDisplay').textContent = fileUrl;
   Make sure the array length matches the number of parsed questions.
 */
 const answerKey = [
-  [1],[2],[1],[1],[1],[1],[2],[2],[2],[1],
-  [1],[1],[1],[2],[2],[0,2,3],[2],[1],[2],[1],
-  [1],[1],[2],[0,2,3],[1],[1],[0],[2],[1],[2],
-  [2],[2],[1],[3],[2],[1],[2],[0],[1],[2],
-  [2],[0,1,2,3,4],[2],[1],[1],[2],[1],[1],[2],[2],
-  [2],[2],[2],[2],[2],[3],[2],[2],[2],[1],
-  [2],[1],[1],[2],[2],[2],[0,2,3],[1],[1],[1],
-  [1,3],[1,3],[2],[1],[2],[2],[1],[1,3],[2],[2],
-  [2]
+  [1], //1 B
+  [2], //2 C
+  [1], //3 B
+  [1], //4 B
+  [1], //5 B
+  [1], //6 B
+  [2], //7 C
+  [2], //8 C
+  [2], //9 C
+  [1], //10 B
+
+  [0], //11 A
+  [1], //12 B
+  [1], //13 B
+  [2], //14 C
+  [2], //15 C
+  [0,2,3], //16 A,C,D
+  [2], //17 C
+  [1], //18 B
+  [2], //19 C
+  [1], //20 B
+
+  [1], //21 B
+  [1], //22 B
+  [2], //23 C
+  [0,2,3], //24 A,C,D
+  [1], //25 B
+  [1], //26 B
+  [0], //27 A
+  [2], //28 C
+  [1], //29 B
+  [2], //30 C
+
+  [2], //31 C
+  [2], //32 C
+  [1], //33 B
+  [3], //34 D
+  [2], //35 C
+  [1], //36 B
+  [2], //37 C
+  [0], //38 A
+  [1], //39 B
+  [2], //40 C
+
+  [2], //41 C
+  [0,1,2], //42 A,B,C
+  [2], //43 C
+  [1], //44 B
+  [1], //45 B
+  [2], //46 C
+  [1], //47 B
+  [1], //48 B
+  [2], //49 C
+  [2], //50 C
+
+  [2], //51 C
+  [2], //52 C
+  [2], //53 C is incorrect → answer = C
+  [2], //54 C
+  [2], //55 C
+  [3], //56 D
+  [2], //57 C
+  [2], //58 C
+  [0], //59 A
+  [2], //60 C
+
+  [1], //61 B
+  [1], //62 B
+  [2], //63 C
+  [2], //64 C
+  [2], //65 C
+  [0,1,3], //66 A,B,D
+  [1], //67 B
+  [1], //68 B
+  [1], //69 B
+  [1,3], //70 B,D
+
+  [1,3], //71 B,D
+  [2], //72 C
+  [1], //73 B
+  [2], //74 C
+  [2], //75 C
+  [1], //76 B
+  [1,3], //77 B,D
+  [2], //78 C
+  [2], //79 C
+  [2], //80 C
+
+  [0], //81 A
+  [2], //82 C
+  [0,1,2], //83 A,B,C (default: PR merged, label added, item closed)
+  [0,3], //84 A,D
+  [2], //85 C
+  [0], //86 A
+  [2], //87 C
+  [1], //88 B
+  [1,3,5], //89 B,D,F
+  [2], //90 C
+
+  [0,2], //91 A,C
+  [1], //92 B
+  [0], //93 A
+  [2], //94 C
+  [1,3], //95 B,D
+  [2], //96 C
+  [1,2,3], //97 B,C,D
+  [0,2], //98 A,C
+  [2], //99 C
+  [0], //100 A
+
+  [1,2], //101 B,C
+  [0,5], //102 A,F
+  [1], //103 B
+  [1,2], //104 B,C
+  [1], //105 B
+  [1], //106 B
+  [1], //107 B
+  [0], //108 A
+  [0], //109 A
+  [1], //110 B
+
+  [0], //111 A
+  [1], //112 B
+  [0,1,3], //113 A,B,D
+  [1], //114 B
+  [0,1,4], //115 A,B,E
+  [1,3], //116 B,E
+  [0,3], //117 A,D
+  [0], //118 A
+  [1,2], //119 B,C
+  [3], //120 D
+
+  [1], //121 B
+  [3], //122 D
+  [1], //123 B
+  [1], //124 B
+  [0,5,6], //125 A,F,G
+  [2], //126 C
+  [0], //127 A
+  [3], //128 D
+  [2,3,5], //129 C,D,F
+  [2,3], //130 C,D
+
+  [1], //131 B
+  [1,2], //132 B,C
+  [0], //133 A
+  [0,2], //134 A,C
+  [1,4], //135 B,E
+  [3], //136 D
+  [0], //137 A
+  [0], //138 A
+  [3], //139 D
+  [3], //140 D
+
+  [1], //141 B
+  [2], //142 C
+  [1,4], //143 B,E
+  [1,3,5] //144 B,D,F
 ];
-// Note: answerKey length = 80 (matches 80 questions)
+// Note: answerKey length = 144 (matches 144 questions)
 
 /* ======= Utility: parse uploaded text file into questions ======= */
 async function loadAndParseFile(url) {
